# pain-relief-app

./: PRD.md  README.md  TECH_SPEC.md
andon/: .env  .env.example  CLASSIFIER_PLAN.md  Dockerfile  New_Features.md  alembic.ini  docker-compose.yml  generate_checklist.py  grade_excel.py  keywords_and_phrases.md  keywords_and_phrases_checklist.xlsx  pyproject.toml  requirements.txt  setup.sh
andon/alembic/: env.py  script.py.mako
andon/alembic/versions/: 2975057382ca_initial_schema_all_5_tables.py
andon/app/: __init__.py  config.py  keywords_rules.json  main.py
andon/app/api/: __init__.py  admin.py  auth.py  schedule.py  seed.py
andon/app/models/: __init__.py  contact.py  designer_log.py  event.py  house.py  schedule_item.py
andon/app/repositories/: __init__.py  base.py  contact_repo.py  house_repo.py  schedule_repo.py
andon/app/services/: __init__.py  auth.py  classifier.py  inbound.py  keyword_loader.py  media_store.py  outbound.py  project_resolver.py  scheduler.py  transcriber.py
andon/app/templates/: base.html  dashboard.html
andon/app/views/: dashboard.py  onboarding.py
andon/app/webhooks/: plivo.py  sendgrid.py  (+1 more)
andon/docs/: PILOT_EXECUTION_CHECKLIST.md  PRD.md  PRODUCT_ROADMAP.md  SPRINT_ZERO.md  TECH_SPEC.md  admin-monitoring-system.md  dashboard_action_review.md  migration_report.md  pilot_assessment.md  plivo_audit.md  product_evolution_report.md  twilio_readiness_report.md
andon/new_features/: classifier_v4_upgrade.md  public_api.md  zapier_connector.md
andon/vision_board/: README.md  classifier_v4_schema.json  classifier_v4_spec.md
(+21 files in other folders)
